--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FNotes">
 
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value=""/>
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
 
         <activity android:name=".activities.CreateNoteActivity"
             android:screenOrientation="portrait"
